Table of contents dark mode fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -173,6 +173,11 @@ html.dark {
   .dark .title-dashed-line {
     border-top: 4px dashed white;
 }
+
+.dark .table-of-contents-section {
+  background-color: black;
+  text: white;
+}
   
 @view-transition {
     navigation: auto;
